--- a/settings.json
+++ b/settings.json
@@ -2,15 +2,15 @@
     "self_mode": false,
 	"autobio": false,
 	"msg_connected": false,
-	"user_register": false,
+	"user_register": true,
 	"anti_delete" : false,
 	"anticall": false,
 	"auto_welcome_msg": true,
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumberr": "62887435047326",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
+	"ownerNumberr": "62887435047326"."6285931225652"
+	"ownername": "M.SDQ",
 	"botname":"Alphabot",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
